@@ -1,2 +1,0 @@
-WindowMaker-ish theme; uses the absolute-e bar images by default, but
-almost everything may be customized
