@@ -1,2 +1,0 @@
-Tema estilo WindowMaker; usa as imaxes das barras do absolute-e, por
-defecto, pero case todo pode ser persoalizado
