@@ -1,2 +1,0 @@
-Tema basato su WindowMaker, usa di default le immagini di absolute-e,
-ma quasi tutto può essere personalizzato
