@@ -1,2 +1,0 @@
-WindowMaker っぽいテーマで、absolute-e のバー画像をデフォルトでは
-使っていますが、ほとんどすべてがカスタマイズ可能です。
