@@ -1,3 +1,0 @@
-Motyw wzorowany na WindowMakerze; domyślnie używa obrazów z paska absolute-e,
-ale prawie wszystko można zmieniać.
-
