@@ -1,4 +1,5 @@
 2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* themes/smaker/
 	* themes/mono/
 	* themes/gtk/
 	* themes/gradient/: removed
